optimized code. implemented thread usage